# xcube_server/res/openapi/openapi.yml
@@ -246,18 +246,20 @@ paths:
         '500':
           description: Unexpected error.
 
-  '/features':
+  '/features/{collection}':
     get:
       tags:
         - features
       summary: Find features
       operationId: findFeatures
       description: |
-        Find features matching the given geometry and/or query expression.
+        Find all features in given collection matching the given geometry and/or query expression.
+        The collection named "all" represents all available features.
         Only one of "bounds" or "geom" parameters may be given to specify the query geometry.
         Returns a FeatureCollection which may be empty.
 
       parameters:
+        - $ref: '#/components/parameters/collection'
         - $ref: '#/components/parameters/bounds'
         - $ref: '#/components/parameters/geom'
         - $ref: '#/components/parameters/expr'
@@ -273,11 +275,13 @@ paths:
       summary: Find features
       operationId: findFeaturesForGeoJSON
       description: |
-        Find features matching the query expression and/or the geometry passed as a GeoJSON request.
+        Find features in given collection matching the query expression and/or the geometry passed as a GeoJSON request.
+        The collection named "all" represents all available features.
         If a GeoJSON FeatureCollection object is passed, only the first feature's geometry is used.
         Only one of "bounds" or "geom" parameters may be given to specify the query geometry.
         Returns a FeatureCollection which may be empty.
       parameters:
+        - $ref: '#/components/parameters/collection'
         - $ref: '#/components/parameters/expr'
         - $ref: '#/components/parameters/comb'
       requestBody:
@@ -285,22 +289,30 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/GeoJsonFeatureCollection'
-  '/features/{dataset}':
+
+  '/features/{collection}/{dataset}':
     get:
       tags:
         - features
       summary: Find features for dataset
-      operationId: findFeaturesForDataset
+      operationId: findFeatures
       description: |
-        Find features intersecting with the given dataset and/or matching the given query string.
+        Find all features in given collection matching the given geometry and/or query expression.
+        The collection named "all" represents all available features.
+        Only one of "bounds" or "geom" parameters may be given to specify the query geometry.
         Returns a FeatureCollection which may be empty.
+
       parameters:
+        - $ref: '#/components/parameters/collection'
         - $ref: '#/components/parameters/dataset'
         - $ref: '#/components/parameters/expr'
         - $ref: '#/components/parameters/comb'
       responses:
         '200':
           $ref: '#/components/responses/GeoJsonFeatureCollection'
+        '404':
+          description: Resource not found.
+
 components:
   parameters:
     dataset:
